--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
-  }
+    "incremental": true,
+    "allowJs": true
+  },
+  "include": ["test", "scripts", "src", "typeorm"],
+  "exclude": ["node_modules", "dist"]
 }
