fix: update prefix commit message dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,28 +1,28 @@
 version: 2
 updates:
-  - package-ecosystem: 'npm'
-    directory: '/'
+  - package-ecosystem: "npm"
+    directory: "/"
     schedule:
-      interval: 'weekly'
-      day: 'sunday'
-      time: '08:00'
-      timezone: 'Asia/Ho_Chi_Minh'
+      interval: "weekly"
+      day: "sunday"
+      time: "08:00"
+      timezone: "Asia/Ho_Chi_Minh"
     versioning-strategy: increase-if-necessary
-    target-branch: 'develop'
+    target-branch: "develop"
     open-pull-requests-limit: 10
-    rebase-strategy: 'auto'
+    rebase-strategy: "auto"
     ignore:
-      - dependency-name: '@nestjs/common'
-      - dependency-name: '@nestjs/core'
-      - dependency-name: '@nestjs/platform-express'
-      - dependency-name: 'reflect-metadata'
+      - dependency-name: "@nestjs/common"
+      - dependency-name: "@nestjs/core"
+      - dependency-name: "@nestjs/platform-express"
+      - dependency-name: "reflect-metadata"
     labels:
-      - 'dependencies'
-      - 'dependabot'
+      - "dependencies"
+      - "dependabot"
     commit-message:
-      - prefix: 'fix'
-      - prefix-development: 'chore'
-      - include: 'scope'
+      - prefix: "npm"
+      - prefix-development: "chore"
+      - include: "scope"
     assignees:
       - phanduc0908
       - quangnv281098
