chore: update somthings

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
+NODE_ENV=development
 JWT_SECRET=fucking-todo
 SALT_WORK_FACTORY=12
-DB_CONNECT_STRING_DEV=postgres://root:password@todo-db/db?charset=UTF8
 SERVER_PORT=3000
 
 # Database
+DB_HOST=0.0.0.0
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=tool-okrs-db
-DB_PORT=7200
+DB_PORT=5432
 
 # Redis
 REDIS_HOST=0.0.0.0
