--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,16 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "incremental": true,
     "allowJs": true,
     "paths": {
       "@helpers/*": ["./src/services/helpers/*"]
     }
   },
-  "include": ["test", "scripts", "src", "typeorm"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["test/**/*", "scripts", "src/**/*"],
+  "exclude": ["node_modules", "dist"],
+  "typeAcquisition": {
+    "include": ["jest"]
+  }
 }
