--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ SALT_WORK_FACTORY=12
 SERVER_PORT=3000
 
 # Database
-DB_HOST=0.0.0.0
-DB_USER=root
+DB_HOST=localhost
+DB_USERNAME=root
 DB_PASSWORD=password
-DB_NAME=tool-okrs-db
+DB_NAME=okrs-db
 DB_PORT=5432
 
 # Redis
