--- a/.env.example
+++ b/.env.example
@@ -10,18 +10,14 @@ DB_PASSWORD=password
 DB_NAME=tool-okrs-db
 DB_PORT=5432
 
-# TypeORM
-TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = localhost
-TYPEORM_USERNAME = root
-TYPEORM_PASSWORD = password
-TYPEORM_DATABASE = tool-okrs-db
-TYPEORM_PORT = 5432
-TYPEORM_SYNCHRONIZE = true
-TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = entity/*.js,modules/**/entity/*.js
-
-TYPEORM_ENTITIES=src/db/*.entity.ts
+#Type ORM
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=0.0.0.0
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=password
+TYPEORM_DATABASE=tool-okrs-db
+TYPEORM_PORT=5432
+TYPEORM_ENTITIES=src/db/entities/*.entity.ts
 TYPEORM_MIGRATIONS=src/db/migrations/*.ts
 TYPEORM_ENTITIES_DIR=src/db/entities
 TYPEORM_MIGRATIONS_DIR=src/db/migrations
