--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "okrs-enterprise-api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "OKRs Tool for startup",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint:prettier": "prettier --write --loglevel warn",
+    "lint:eslint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --ignore-path .gitignore . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:create": "typeorm migration:create -n",
     "migration:run": "yarn typeorm migration:run",
     "migration:revert": "yarn typeorm migration:revert"
+  },
+  "engines": {
+    "node": ">=12.18.1"
+  },
+  "gitHooks": {
+    "pre-commit": "ls-lint && lint-staged",
+    "commit-msg": "node scripts/verifyCommitMsg.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -38,6 +46,7 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@ls-lint/ls-lint": "^1.8.1",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
@@ -48,30 +57,20 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
+    "chalk": "^4.1.0",
+    "conventional-changelog-cli": "^2.0.34",
     "eslint": "7.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "26.0.1",
+    "lint-staged": "^10.2.11",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "typescript": "^3.7.4",
+    "yorkie": "^2.0.0"
   }
 }
