--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "7.0.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
