build: update docker compose & ignore file

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,19 @@
-test
+.env
 .vscode
 .github
+.git
+.prettierrc
+.prettierignore
+codecov.yml
+.ls-lint.yml
+coverage
+*.md
+
+# Node Files
+node_modules
+npm-debug.log
+npm-debug.log.*
+
+# Source files
+src
+test
