--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.7"
+version: '3.7'
 services:
   tool-okrs-db:
     container_name: tool-okrs-db
     image: postgres:11-alpine
     restart: ${RESTART_POLICY}
     ports:
-      - "${DB_PORT}:5432"
+      - ${DB_PORT}:5432
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -21,29 +21,29 @@ services:
   #   restart: ${RESTART_POLICY}
   #   ports:
   #     - "${REDIS_PORT}:6379"
-  tool-okrs:
-    container_name: tool-okrs
-    restart: ${RESTART_POLICY}
-    build:
-      context: .
-      target: development
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/dist
-      - /usr/src/app/node_modules
-    ports:
-      - 3400:3000 # DON'T CONFLICT WITH MAIN PROTEUS APP LOCALLY
-      - 9229:9229 # FOR DEBUG
-    command: npm run start
-    env_file: .env
-    networks:
-      - webnet
-    depends_on:
-      - tool-okrs-db
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "3"
+  # tool-okrs:
+  #   container_name: tool-okrs
+  #   restart: ${RESTART_POLICY}
+  #   build:
+  #     context: .
+  #     target: development
+  #   volumes:
+  #     - .:/usr/src/app
+  #     - /usr/src/app/dist
+  #     - /usr/src/app/node_modules
+  #   ports:
+  #     - 3400:3000 # DON'T CONFLICT WITH MAIN PROTEUS APP LOCALLY
+  #     - 9229:9229 # FOR DEBUG
+  #   command: yarn start:dev
+  #   env_file: .env
+  #   networks:
+  #     - webnet
+  #   depends_on:
+  #     - tool-okrs-db
+  #   logging:
+  #     options:
+  #       max-size: '10m'
+  #       max-file: '3'
 
 networks:
   webnet:
