wip: create migration

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=password
 TYPEORM_DATABASE=tool-okrs-db
 TYPEORM_PORT=5432
-TYPEORM_ENTITIES=src/db/entities/*.ts
+#TYPEORM_ENTITIES=src/db/entities/*.ts
 TYPEORM_MIGRATIONS=src/db/migrations/*.ts
 TYPEORM_ENTITIES_DIR=src/db/entities
 TYPEORM_MIGRATIONS_DIR=src/db/migrations
