Revert "fix: docker-compose"
This reverts commit 6a4f56b4794aafa1d4c41dfabd414f503cc4883b.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
   #     options:
   #       max-size: '10m'
   #       max-file: '3'
-networks:
-  webnet:
-volumes:
-  pgdata:
+# networks:
+#   webnet:
+# volumes:
+#   pgdata:
