--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "generate-password": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -69,8 +71,10 @@
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
+    "@types/generate-password": "^1.5.0",
     "@types/jest": "25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
