--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "doc:serve": "npx compodoc -s --port 9000",
     "migration:create": "typeorm migration:create -n",
     "migration:run": "yarn typeorm migration:run",
-    "migration:revert": "yarn typeorm migration:revert"
+    "migration:revert": "yarn typeorm migration:revert",
+    "seed:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "engines": {
     "node": ">=12.18.1"
@@ -62,7 +63,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
     "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@ls-lint/ls-lint": "^1.9.0",
@@ -71,6 +73,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.12",
     "@types/generate-password": "^1.5.0",
     "@types/jest": "26.0.3",
     "@types/jsonwebtoken": "^8.5.0",
