--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint:eslint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --ignore-path .gitignore . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --passWithNoTests",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
