build: update dependabot interval & timezone

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,10 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: daily
       day: "sunday"
       time: "08:00"
-      timezone: "Asia/Ho_Chi_Minh"
+      timezone: Asia/Saigon
     versioning-strategy: increase
     target-branch: "develop"
     open-pull-requests-limit: 10
