--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.7"
+version: '3.7'
 services:
   tool-okrs-db:
     container_name: tool-okrs-db
     image: postgres:11-alpine
     restart: ${RESTART_POLICY}
     ports:
-      - 5432:5432
+      - ${DB_PORT}:5432
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
