--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,11 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: daily
+      interval: weekly
       day: "sunday"
       time: "08:00"
       timezone: Asia/Saigon
-    versioning-strategy: increase
+    versioning-strategy: increase-if-necessary
     target-branch: "develop"
     open-pull-requests-limit: 10
     rebase-strategy: "auto"
