chore: Update expire token reset password (#20)

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,5 @@ REDIS_PORT=6379
 
 RESTART_POLICY=no
 
-# Email
-EMAIL_NAME: sp.flame.okrs@gmail.com
-EMAIL_PASSWORD: flameOkrs@123
+EMAIL_NAME=sp.flame.okrs@gmail.com
+EMAIL_PASSWORD=flameOkrs@123
