--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
+    "slugify": "^1.4.4",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.25",
     "typeorm-seeding": "^1.6.1"
