--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_USER=root
 DB_PASSWORD=password
 DB_NAME=tool-okrs-db
 DB_PORT=5432
-SEED_PASSSWORD=helloworld
+SEED_PASSSWORD=Admin123
 
 # Redis
 REDIS_HOST=0.0.0.0
