--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Publish to Github Packages Registry
 
         uses: elgohr/Publish-Docker-Github-Action@master
