feat: update deployment.yml

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,5 +33,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+            whoami
             docker login docker.pkg.github.com -u $GITHUB_USERNAME -p $GITHUB_TOKEN
             docker pull docker.pkg.github.com/$GITHUB_REPOSITORY/be:$GITHUB_SHA
