chore(script): add command to run migrate & seed db

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "migration:create": "typeorm migration:create -n",
     "migration:run": "yarn typeorm migration:run",
     "migration:revert": "yarn typeorm migration:revert",
-    "seed:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "seed:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "setup:db": "yarn migration:run && yarn seed:run"
   },
   "engines": {
     "node": ">=12.18.1"
