--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
-      - name: Publish to Github Packages Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: ${{ github.repository}}/be
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Dockerfile
-          tags: ${{ github.sha }}
+      # - name: Publish to Github Packages Registry
+      #   uses: elgohr/Publish-Docker-Github-Action@master
+      #   with:
+      #     name: ${{ github.repository}}/be
+      #     registry: docker.pkg.github.com
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      #     dockerfile: Dockerfile
+      #     tags: ${{ github.sha }}
       # - name: Deploy package to digitalocean
       #   uses: appleboy/ssh-action@master
       #   env:
