feat: update deployment.yml

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
+      - name: run docker-compose
+        run: pwd
       # - name: Publish to Github Packages Registry
       #   uses: elgohr/Publish-Docker-Github-Action@master
       #   with:
