--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -26,8 +26,7 @@ services:
   #   - "${REDIS_PORT}:6379"
   tool-okrs:
     container_name: tool-okrs
-    image: 0984059992/ducnm:v1
-    restart: ${RESTART_POLICY}
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
