--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -10,11 +10,11 @@ services:
       context: .
     restart: always
     ports:
-      - ${DB_PORT}:5432
+      - 5432:5432
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: tool-okrs-db
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
       PGDATA: /var/lib/postgresql/data
     volumes:
       - pgdata:/var/lib/postgresql/data
