--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,8 +13,8 @@ jobs:
       - name: run docker-compose
         run: |
           cp .env.example .env
-          sudo docker-compose -f docker-compose-deploy.yml down
-          sudo docker-compose -f docker-compose-deploy.yml up -d
+          docker-compose -f docker-compose-deploy.yml down
+          docker-compose -f docker-compose-deploy.yml up -d
       # - name: Publish to Github Packages Registry
       #   uses: elgohr/Publish-Docker-Github-Action@master
       #   with:
