chore: update checkin

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ API_PREFIX_V1=api/v1
 DB_HOST=0.0.0.0
 DB_USER=root
 DB_PASSWORD=password
-DB_NAME=tool-okrs-db
+DB_NAME=flame_db
 DB_PORT=5432
 SEED_PASSSWORD=Admin123
 
