--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "generate-password": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
