--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nestjs/typeorm": "7.0.0",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "date-fns": "^2.15.0",
@@ -70,6 +71,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
+    "showdown": "^1.9.1",
     "slugify": "^1.4.4",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.25",
@@ -81,6 +83,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.3.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cheerio": "^0.22.21",
     "@types/express": "^4.17.3",
     "@types/faker": "^4.1.12",
     "@types/generate-password": "^1.5.0",
@@ -89,6 +92,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/showdown": "^1.9.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.6.0",
     "@typescript-eslint/parser": "3.0.2",
