fix: update staging

--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "migration:revert": "yarn typeorm migration:revert",
     "seed:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed",
     "setup:db": "yarn migration:run && yarn seed:run",
-    "seed:staging": "yarn seed:run --seed Seeder1002Role && yarn seed:run --seed Seeder1001JobPosition && yarn seed:run --seed Seeder1101Team && yarn seed:run --seed Seeder2000UserStaging",
+    "seed:role": "yarn seed:run --seed Seeder1002Role",
+    "seed:job": "yarn seed:run --seed Seeder1001JobPosition",
+    "seed:team": "yarn seed:run --seed Seeder1101Team",
+    "seed:cycle": "yarn seed:run --seed Seeder1004Cycle",
+    "seed:user": "yarn seed:run --seed Seeder2000UserStaging",
+    "seed:staging": "yarn seed:role && yarn seed:job && yarn seed:team && yarn seed:user && yarn seed:cycle",
     "setup:staging": "yarn migration:run && yarn seed:staging"
   },
   "engines": {
