--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@ls-lint/ls-lint": "^1.9.0",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
