--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,31 +1,31 @@
-version: 2
-updates:
-  - package-ecosystem: 'npm'
-    directory: '/'
-    schedule:
-      interval: monthly
-      day: 'sunday'
-      time: '08:00'
-      timezone: Asia/Saigon
-    versioning-strategy: increase-if-necessary
-    target-branch: 'develop'
-    open-pull-requests-limit: 10
-    rebase-strategy: 'auto'
-    ignore:
-      - dependency-name: '@nestjs/common'
-      - dependency-name: '@nestjs/core'
-      - dependency-name: '@nestjs/platform-express'
-      - dependency-name: 'reflect-metadata'
-      - dependency-name: '@nestjs/typeorm'
-      - dependency-name: '@nestjs/typeorm'
-      - dependency-name: 'pg'
-      - dependency-name: 'typeorm'
-    labels:
-      - 'dependencies'
-      - 'dependabot'
-    commit-message:
-      prefix: 'npm'
-      prefix-development: 'chore'
-      include: 'scope'
-    assignees:
-      - harrytran998
+# version: 2
+# updates:
+#   - package-ecosystem: 'npm'
+#     directory: '/'
+#     schedule:
+#       interval: monthly
+#       day: 'sunday'
+#       time: '08:00'
+#       timezone: Asia/Saigon
+#     versioning-strategy: increase-if-necessary
+#     target-branch: 'develop'
+#     open-pull-requests-limit: 10
+#     rebase-strategy: 'auto'
+#     ignore:
+#       - dependency-name: '@nestjs/common'
+#       - dependency-name: '@nestjs/core'
+#       - dependency-name: '@nestjs/platform-express'
+#       - dependency-name: 'reflect-metadata'
+#       - dependency-name: '@nestjs/typeorm'
+#       - dependency-name: '@nestjs/typeorm'
+#       - dependency-name: 'pg'
+#       - dependency-name: 'typeorm'
+#     labels:
+#       - 'dependencies'
+#       - 'dependabot'
+#     commit-message:
+#       prefix: 'npm'
+#       prefix-development: 'chore'
+#       include: 'scope'
+#     assignees:
+#       - harrytran998
